--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,41 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==21.2.0
-cffi==1.15.0
-chardet==4.0.0
-discord.py==1.7.3
-idna==3.3
-multidict==5.2.0
-norminette==3.3.40
+aiohttp==3.8.3
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==22.1.0
+boltons==23.0.0
+brotlipy==0.7.0
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==2.0.4
+conda==23.7.3
+conda-package-handling==2.2.0
+conda_package_streaming==0.9.0
+cryptography==41.0.2
+frozenlist==1.3.3
+idna==3.4
+jsonpatch==1.32
+jsonpointer==2.1
+multidict==6.0.2
+overrides==7.4.0
+packaging==23.0
+pip==23.2.1
+pluggy==1.0.0
+py-cord==2.4.0
+pyarr==5.2.0
+pycosat==0.6.4
 pycparser==2.21
-PyNaCl==1.4.0
-six==1.16.0
-typing-extensions==3.10.0.2
-yarl==1.7.2
+pyOpenSSL==23.2.0
+PySocks==1.7.1
+python-decouple==3.8
+requests==2.31.0
+ruamel.yaml==0.17.21
+setuptools==68.0.0
+toolz==0.12.0
+tqdm==4.65.0
+types-requests==2.31.0.2
+types-urllib3==1.26.25.14
+typing_extensions==4.7.1
+urllib3==1.26.16
+wheel==0.38.4
+yarl==1.8.1
+zstandard==0.19.0
