--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         rsync -avz -e "ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no" --exclude '.git' ./ $SERVER_USER@$SERVER_IP:$DEPLOY_PATH
 
         # Execute the Python script on the server
-        ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "cd $DEPLOY_PATH && pip3 install -r requirements.txt && python3 main.py"
+        ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "cd $DEPLOY_PATH && source mpu_env/bin/activate && pip install -r requirements.txt && python main.py"
 
         # Cleanup
         rm -f deploy_key
