--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,11 +33,10 @@ jobs:
         rsync -avz -e "ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no" --exclude '.git' ./ $SERVER_USER@$SERVER_IP:$DEPLOY_PATH
 
         # Execute the Python script on the server
-		ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
+        ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
           cd $DEPLOY_PATH &&
           docker-compose down &&
-          docker-compose up -d --build
-        "
+          docker-compose up -d --build "
 
         # Cleanup
         rm -f deploy_key
