--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
         # Execute the Python script on the server
         ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
           cd $DEPLOY_PATH &&
-          docker-compose down &&
-          docker-compose up -d --build "
+          docker compose down &&
+          docker compose up -d --build "
 
         # Cleanup
         rm -f deploy_key
