--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy and Execute on Server
+name: Deploy in PRD
 
 on:
   workflow_dispatch:
@@ -14,23 +14,25 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Deploy and Execute Script on Server
-      env:
-        DEPLOY_SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SERVER_IP: ${{ secrets.SERVER_IP }}
-        SERVER_PORT: ${{ secrets.SERVER_PORT }}
-        SERVER_USER: ${{ secrets.SERVER_USER }}
-        DEPLOY_PATH: ${{ secrets.PATH }}
+    - name: Install SSH Client and Rsync
       run: |
-        # Install SSH client
-        sudo apt-get install -y ssh-client
+        sudo apt-get update
+        sudo apt-get install -y ssh-client rsync
 
+    - name: Deploy, build and run Docker
+      env:
+        DEPLOY_SSH_KEY: ${{ PRD.SSH_PRIVATE_KEY }}
+        SERVER_IP: ${{ PRD.SERVER_IP }}
+        SERVER_PORT: ${{ PRD.SERVER_PORT }}
+        SERVER_USER: ${{ PRD.SERVER_USER }}
+        DEPLOY_PATH: ${{ PRD.PATH }}
+      run: |
         # Write the SSH key to a file
         echo "$DEPLOY_SSH_KEY" > deploy_key
         chmod 600 deploy_key
 
         # Use rsync to deploy the code to the server
-        rsync -avz -e "ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no" --exclude '.git' ./ $SERVER_USER@$SERVER_IP:$DEPLOY_PATH
+        rsync -avz -e "ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no" --exclude '.git' --exclude 'deploy_key' ./ $SERVER_USER@$SERVER_IP:$DEPLOY_PATH
 
         # Execute the Python script on the server
         ssh -i deploy_key -p $SERVER_PORT -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP "
